# EDColonyBot

./: .gitignore  Cargo.toml  README.md  config.json
src/: commodities.rs  main.rs
src/bot/: commands.rs  events.rs  mod.rs
src/data/: database.rs  models.rs
src/elite/: api.rs  construction.rs  mod.rs
