[package]
name = "ed-colony-bot"
version = "0.1.0"
edition = "2021"

# Dependencies for the project
[dependencies]
serenity = { version = "0.10", features = ["client", "gateway", "model"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4", features = ["r2d2", "sqlite"] }
dotenv = "0.15"