[package]
name = "edcolonybot"
version = "0.1.0"
edition = "2024"
authors = ["Joshua Betts", "Zachary Perkins"]
description = "Discord Bot to Track construction site deliveries for Elite Dangerous"

[dependencies]
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
poise = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
file_sync = { git = "https://github.com/zperk13/file_sync" }
